# inventory-order-starter-backend

./: .editorconfig  .env.example  BUILD_LOG.md  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.bat  smoke.db  start.sh  start_server.py  uvicorn_err.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_users_and_audit_events.py  0002_products_customers_orders.py
backend/app/: main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: auth.py  customers.py  dashboard.py  health.py  orders.py  products.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_event.py  customer.py  order.py  product.py  user.py
backend/app/repositories/: audit_repository.py  customer_repository.py  order_repository.py  product_repository.py  user_repository.py
backend/app/schemas/: auth.py  customer.py  dashboard.py  order.py  product.py
backend/app/services/: admin_seed.py  auth_service.py
backend/scripts/: seed_user.py
backend/tests/: conftest.py  test_auth.py  test_health.py
docs/: DESIGN.md
docs/adr/: 0001-record-architecture-decisions.md  template.md
